fix: extra padding in .dropdown-menu styling inherited from bs3

--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,8 @@
 .header, .slideout-menu {
-	.notifications .dropdown-menu {
-		padding: 0;
+	.notifications.dropdown, .chats.dropdown {
+		.dropdown-menu {
+			padding: 0;
+		}
 	}
 
 	.notification-list {
